name:                atom-msp430
version:             0.0.0.1
synopsis:            Convenience functions for using Atom with the MSP430 microcontroller family.
-- description:         
homepage:            https://github.com/eightyeight/atom-msp430
license:             MIT
license-file:        LICENSE
author:              Daniel Buckmaster
maintainer:          dan.buckmaster@gmail.com
-- copyright:           
category:            Embedded
build-type:          Simple
cabal-version:       >=1.8

library
  -- exposed-modules:     
  -- other-modules:       
  build-depends:       base ==4.5.*
